drawArrow() is working beautifully :)
a little high school geometry did the trick. next step is to have it
accept objects as `from` and `to` and draw arrows between the corners
of the bounding rects.

--- a/css/bbw.css
+++ b/css/bbw.css
@@ -85,8 +85,6 @@ h2 a {
 	display: block;
 }
 
-
-
 /* HELPER STUFF */
 
 .ir {
@@ -95,4 +93,18 @@ h2 a {
 	text-align: left;
 	direction: ltr;
 	background-repeat: no-repeat;
+}
+
+/* SVG */
+
+#svg-canvas {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+path, polyline {
+	fill: none;
+	stroke: black;
+	stroke-width: 1;
 }
