--- a/css/bbw.css
+++ b/css/bbw.css
@@ -13,6 +13,44 @@ a {
 	text-decoration: none;
 }
 
+/* BBW WEBFONT DEFINITIONS */
+
+@font-face {
+	font-family: 'BloombergLBold';
+	  src: url("http://www.businessweek.com/assets/type/bloombergl_heavy.eot?#iefix") format('embedded-opentype'),
+		   url('http://www.businessweek.com/assets/type/bloombergl_heavy.ttf') format('truetype');
+	  font-weight: bold;
+	  font-style: normal;
+}
+@font-face {
+	font-family:'BWHaasHead';
+	src: url('http://www.businessweek.com/assets/type/hinted/haas/bwhaasgroteskhead-95black.eot?#iefix') format('eot'),
+		 url('http://www.businessweek.com/assets/type/hinted/haas/bwhaasgroteskhead-95black.woff') format('woff'),
+		 url('http://www.businessweek.com/assets/type/haas/bwhaasgroteskhead-95black.ttf') format('truetype');
+
+	font-style: normal;
+	font-weight: 700;
+	font-stretch: normal;
+}
+@font-face {
+	font-family:'BWHaasHead75Bold';
+	src: url('http://www.businessweek.com/assets/type/hinted/haas75/bwhaasgroteskhead-75bold.eot?#iefix') format('eot'),
+		 url('http://www.businessweek.com/assets/type/hinted/haas75/bwhaasgroteskhead-75bold.woff') format('woff'),
+		 url('http://www.businessweek.com/assets/type/haas75/bwhaasgrotesktext-75bold.ttf') format('truetype');
+	font-style: normal;
+	font-weight: 700;
+	font-stretch: normal;
+}
+@font-face {
+	font-family:'BWHaasRegular';
+	src: url('http://www.businessweek.com/assets/web_fonts/bwhaasgroteskhead-65medium.eot?#iefix') format('eot'),
+		 url('http://www.businessweek.com/assets/web_fonts/bwhaasgroteskhead-65medium.woff') format('woff'),
+		 url('http://www.businessweek.com/assets/web_fonts/bwhaasgrotesktext-65medium.ttf') format('truetype');
+	font-style: normal;
+	font-weight: 700;
+	font-stretch: normal;
+}
+
 /* HEADER LOGO */
 /* this is largely ported from the main businessweek.com css */
 
