--- a/css/bbw.css
+++ b/css/bbw.css
@@ -3,6 +3,7 @@ body {
   color: #444444;
   font-family: sans-serif;
   line-height: 1.231;
+	font-family: Helvetica, sans-serif;
 }
 
 body.dark_layout {
