eh. svg canvas probs shouldn't be fullscreen by default. is it really worth trying to do this logo thing?

--- a/css/bbw.css
+++ b/css/bbw.css
@@ -143,6 +143,7 @@ h2 a {
   text-align: right;
   font-size: 10px;
   font-family: Helvetica;
+  margin-top: 50px;
 }
 
 .wide .data-credit {
@@ -161,7 +162,7 @@ h2 a {
 
 /* SVG */
 
-#svg-canvas {
+#svg-canvas.fullscreen {
   position: absolute;
   width: 100%;
   height: 100%;
